# SwarmSystemSetup

./: README.md
hector_quadrotor/hector_quadrotor_demo/rviz_cfg/: indoor_slam.rviz
hector_quadrotor_description/launch/: xacrodisplay_quadrotor_base.launch
hector_quadrotor_description/urdf/: quadrotor_downward_cam.urdf.xacro
multibot_experiments/: CMakeLists.txt  package.xml
multibot_experiments/config/rviz/: aruco_tf.rviz  drone_camera.rviz
multibot_experiments/scripts/: aruco_localization.py  drone_controller.py
multibot_simulations/: CMakeLists.txt  package.xml
multibot_simulations/config/: bots_data.yaml
multibot_simulations/launch/: camera.launch  drone.launch
multibot_simulations/scripts/: simulation_bot_spawner.py
multibot_simulations/urdf/: camera_gazebo.urdf
turtlebot3_markers_description/: CMakeLists.txt  package.xml
turtlebot3_markers_description/launch/: display.launch  gazebo.launch
turtlebot3_markers_description/urdf/: turtlebot3_burger_marker.urdf.xacro  turtlebot3_waffle_pi_marker.urdf.xacro
