<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_markers_description</name>
  <version>1.0.0</version>
  <description>
    3D models of the TurtleBot3 With markers on top for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <author email="videh.p@iitgn.ac.in">Videh</author>
  <maintainer email="videh.p@iitgn.ac.in">Videh</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
